# clinicalmem

./: .dockerignore  .gitignore  CHANGELOG.md  CLINICALMEM.md  CONTRIBUTING.md  DEVPOST.md  Dockerfile.a2a  Dockerfile.mcp  JUDGES.md  NOTICE.md  README.md  SECURITY.md  UMLS_INTEGRATION.md  competitive-analysis-v2.md  demo-script.md  demo.html  deploy.sh  devpost-submission.md  docker-compose.yml  generate_gallery.py  generate_images.py  generate_voiceover.py  generate_voiceover_v4.py  pyproject.toml  run-demo.sh
.arch-mind/: last_summary.json  rules.mind
.github/workflows/: arch-mind.yaml  deploy-a2a-prod.yaml  deploy-env.yaml  deploy-mcp-prod.yaml  pages.yaml  test.yaml
.wrangler/cache/: pages.json
a2a_agent/: __init__.py  agent.py  app.py
a2a_agent/tools/: __init__.py  fhir_tools.py  memory_tools.py  safety_tools.py
docs/: _headers  arch_mind.json  arch_mind_federation_audit.md  architecture.md  audit_replay_pins.json  bitnet_browser.js  bitnet_calibration.json  bitnet_confusion_matrix.json  bitnet_pairs.json  bitnet_training.md  bitnet_training_summary.json  clinical_validation.md  clinicalmem_invariants.md  cohort_coverage_matrix.md  demo.html  edge_pi_offline.md  fda_q_sub_draft.md  federated_memory.md  flows.json  index.html  irb_exemption.md  llms-full.txt  llms.txt  logo-preview.html  negative_control_cohort.json  openevidence_cache.json  openevidence_cache.md  pccp_baseline.json  pccp_eval.md  pccp_eval_latest.json  pharmacology_flags.json  reproducibility_manifest.json  robots.txt  sarah_mitchell_fhir.json  sitemap.xml  synthea_demo_cohort.json  why_bitnet_b158.md  why_mind_flow.md  why_mind_mem_v3.md
docs/arch_mind/: clinicalmem.fixture.json  clinicalmem.scan.json  clinicalmem_rules.mind
docs/engine/: bitnet_weights_b_specialist.json
docs/eval_runs/: README.md  round_4_full.json  round_4_recovery_gemini.json  round_5_post_iter140.json  round_6_local_llm_post_v8.json  round_7_cloud_llm_post_v8.json
engine/: __init__.py  audit_export_part11.py  bitnet_classifier.py  bitnet_features_v8.py  bitnet_weights.iter72-baseline.json.bak  bitnet_weights.json  clinical_memory.py  clinical_scoring.py  consensus_engine.py  fda_client.py  federation_transport.py  fhir_adapter.py  fhir_client.py  flow_runner.py  hallucination_detector.py  llm_synthesizer.py  npi_registry.py  openevidence_cache.py  phi_detector.py  rxnorm_client.py  snomed_client.py  trials_client.py  umls_mapper.py  what_if.py
flows/: AllergyCrossReactivity.flow.mind  ClinicalTrialMatch.flow.mind  JointMemoryFederation.flow.mind  LabContraindication.flow.mind  MedicationSafetyReview.flow.mind  ProviderDisagreement.flow.mind  WhatIfSimulation.flow.mind
mcp_server/: __init__.py  __main__.py  server.py
mcp_server/tools/: __init__.py
retrain_runpod/: README.md  bitnet_weights_v2.json  bitnet_weights_v2_h128.json  bitnet_weights_v3_atc.json  bitnet_weights_v3_full.json  bitnet_weights_v5_h128.json  bitnet_weights_v6_h128.json  bitnet_weights_v8_h256.json  build_augmented_corpus.py  build_augmented_corpus_v2.py  drug_corpus_augmented.jsonl  drug_corpus_augmented_v2.jsonl  run_v3_full_sweep.sh  sweep_v3_full.py  sweep_v3_full_v2.py  sweep_v5_h128.py  sweep_v6_h128.py  sweep_v7_h128.py  sweep_v8_h256.py  train_bitnet_b_specialist.py  train_bitnet_v10_h512.py  train_bitnet_v11_targeted.py  train_bitnet_v2.py  train_bitnet_v2_h128.py  train_bitnet_v2_h64_32.py  train_bitnet_v3_atc.py  train_bitnet_v3_full.py  train_bitnet_v5_h128.py  train_bitnet_v6_h128.py  train_bitnet_v7_h128.py  train_bitnet_v8_h256.py  train_bitnet_v9_h256.py  training_summary_v2.json  training_summary_v6.json
scripts/: build_arch_mind_json.py  build_bitnet_calibration.py  build_bitnet_confusion_matrix.py  build_bitnet_pairs_json.py  build_cohort_coverage.py  build_flows_json.py  build_reproducibility_manifest.py  federation_mock_demo.py  run_all_gates.py  run_arch_mind_gate.py  run_bitnet_determinism_stress.py  run_clinical_regression_eval.py  run_cloud_llm_eval.py  run_local_llm_eval.py  run_negative_control_eval.py  verify_audit_replay.py
tests/fixtures/: sarah_mitchell_bundle.json  sarah_mitchell_transaction.json
tests/test_a2a/: test_a2a_app.py  test_a2a_middleware.py  test_a2a_surface_count_pin.py  test_a2a_tools.py  test_agent_full.py  test_fhir_tools_full.py  test_memory_tools_full.py  test_safety_tools_full.py
tests/test_engine/: test_arch_mind_gate_pin.py  test_audit_export_logging_pin.py  test_audit_export_part11.py  test_audit_export_part11_logging_pin.py  test_audit_replay_structural_integrity_pin.py  test_bitnet_alone_major_recall_pin.py  test_bitnet_body_copy_pin.py  test_bitnet_bundle_b_integrity_pin.py  test_bitnet_bundle_integrity_pin.py  test_bitnet_classified_ensemble_path_pin.py  test_bitnet_classifier.py  test_bitnet_classifier_logging_pin.py  test_bitnet_classify_log_phi_safe_pin.py  test_bitnet_design_class_abstention_pin.py  test_bitnet_features_v8_logging_pin.py  test_bitnet_live_precision_pin.py  test_bitnet_param_count_pin.py  test_bitnet_repro_hash_pin.py  test_browser_bitnet_pin.py  test_bundle_id_cross_file_consistency_pin.py  test_cache_evidence_urls.py  test_cache_shape_invariants_pin.py  test_clinical_memory_extended.py  test_clinical_memory_logging_pin.py  test_clinical_review_pathway_pin.py  test_clinical_scoring.py  test_clinical_scoring_extended.py  test_clinical_scoring_logging_pin.py  test_cohort_count_drift_pin.py  (+101 more)
(+15 files in other folders)
