[project]
name = "clinicalmem"
version = "4.1.0"
description = "Persistent, Auditable, Contradiction-Safe Clinical Memory for Healthcare AI Agents"
requires-python = ">=3.11"
license = "Apache-2.0"
authors = [
    { name = "STARGA Inc", email = "noreply@star.ga" }
]
readme = "README.md"
keywords = ["healthcare", "fhir", "mcp", "a2a", "clinical-memory", "drug-interactions", "patient-safety"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Healthcare Industry",
    "Topic :: Scientific/Engineering :: Medical Science Apps.",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3.12",
]

[project.urls]
Homepage = "https://github.com/star-ga/clinicalmem"
Repository = "https://github.com/star-ga/clinicalmem"
"Prompt Opinion" = "https://app.promptopinion.ai/marketplace"
dependencies = [
    "mind-mem>=3.0.0",        # v3.0.0+ ships SQLCipher at-rest encryption, TAG_v1 audit-integrity, tier-decay (TTL/LRU). See docs/why_mind_mem_v3.md for the load-bearing surfaces ClinicalMem uses.
    "httpx>=0.27",
    "fastmcp>=2.0",
    "google-adk>=1.0",
    "a2a-sdk>=0.2",
    "uvicorn>=0.30",
    "starlette>=0.40",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.24",
    "pytest-cov>=5.0",
    "respx>=0.22",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
