[project]
name = "clinicalmem"
version = "4.1.0"
description = "Persistent, Auditable, Contradiction-Safe Clinical Memory for Healthcare AI Agents"
requires-python = ">=3.11"
license = "Apache-2.0"
authors = [
    { name = "STARGA Inc", email = "info@star.ga" }
]
readme = "README.md"
keywords = ["healthcare", "fhir", "mcp", "a2a", "clinical-memory", "drug-interactions", "patient-safety"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Healthcare Industry",
    "Topic :: Scientific/Engineering :: Medical Science Apps.",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3.12",
]
dependencies = [
    # mind-mem v4.0.1 (released 2026-05-11): v4 federation HTTP wire transport
    # — 4 endpoints in src/mind_mem/http_transport.py (GET /federation/vclock/<block_id>,
    # GET /federation/conflicts, POST /federation/write, POST /federation/resolve)
    # flag-gated by v4.federation, X-MindMem-Token auth, 1 MiB body cap; stdlib
    # mind_mem.v4.federation_client.FederationClient with get_vclock / list_conflicts /
    # push_write / resolve_conflict + specific exceptions (FederationAuthError,
    # FederationFlagDisabled, FederationTransportError); 11/11 wire-transport tests
    # + 40/40 existing http_transport tests pass. v4.0.0 (released 2026-05-10):
    # cognitive kernel + knowledge graph + resilience suite + observability — all
    # opt-in via mind-mem.json features.v4.<flag>; no breaking changes to v3.x.
    # See mind-mem/CHANGELOG.md for full release history.
    # NOTE: Floor pinned at 4.0.0 (currently on PyPI). v4.0.1 is in flight;
    # pip will auto-upgrade to 4.0.1 the moment it lands on PyPI.
    "mind-mem>=4.0.0",
    "httpx>=0.27",
    "fastmcp>=2.0",
    "google-adk>=1.0",
    "a2a-sdk>=0.2",
    "uvicorn>=0.30",
    "starlette>=0.40",
]

[project.urls]
Homepage = "https://github.com/star-ga/clinicalmem"
Repository = "https://github.com/star-ga/clinicalmem"
"Live Demo" = "https://clinicalmem-demo.pages.dev/"
"Hugging Face Model" = "https://huggingface.co/stargainc/clinicalmem-bitnet-b158"
"Devpost" = "https://devpost.com/software/clinimalmem"
"Prompt Opinion" = "https://app.promptopinion.ai/marketplace"

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.24",
    "pytest-cov>=5.0",
    "respx>=0.22",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
